--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
+
+.styx
 *~
 *.hi
 *.o
-/Organ.log
-/Organ.pdf
-/Organ.ptb
-/Organ.tex
-/texput.log
-/Organ.out
-/Organ.md.lhs
-/Organ.aux
-/Organ.bbl
-/Organ.blg
+*.log
+*.pdf
+*.ptb
+*.tex
+*.out
+*.md.lhs
+*.aux
+*.bbl
+*.blg
+*.sp.lhs
 /CleanTex
-/Organ.sp.lhs
